# feeling-rusty

./: .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  Brewfile  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  bindings.yml  codeql.yml
.mise/: config.toml
languages/kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
languages/python/: .gitignore  README.md  pyproject.toml
languages/python/src/feeling_rusty/: __init__.py
languages/ruby/: .gitignore  README.md  feeling_rusty.gemspec
languages/swift/: .gitignore  README.md
src/: lib.rs
